--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kss-php/kss-php",
+    "name": "kiefer79/kss-php",
     "description": "A PHP implementation of KSS: a methodology for documenting CSS and generating styleguides",
     "keywords": [
         "kss",
